RESOLVED FIXED211193
[clang 11] fix build errors due to -WWc++11-narrowing
https://bugs.webkit.org/show_bug.cgi?id=211193
Summary [clang 11] fix build errors due to -WWc++11-narrowing
Charlie Turner
Reported 2020-04-29 10:29:31 PDT
[clang 11] fix build errors due to -WWc++11-narrowing
Attachments
Patch (4.60 KB, patch)
2020-04-29 10:36 PDT, Charlie Turner
no flags
Charlie Turner
Comment 1 2020-04-29 10:36:56 PDT
EWS
Comment 2 2020-04-30 08:12:40 PDT
Committed r260951: <https://trac.webkit.org/changeset/260951> All reviewed patches have been landed. Closing bug and clearing flags on attachment 397978 [details].
Darin Adler
Comment 3 2020-04-30 10:08:21 PDT
Comment on attachment 397978 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=397978&action=review > Source/WebCore/style/StyleResolver.cpp:106 > - m_mediaQueryEvaluator = MediaQueryEvaluator { "all" }; > + m_mediaQueryEvaluator = MediaQueryEvaluator { }; This is a great change. But note that it changes behavior in a big way. The old code was passing true for mediaFeatureResult, by accident. The new code correctly passes false. We need to find a way to get this code path tested.
Note You need to log in before you can comment on or make changes to this bug.